syntax = "proto3";

option go_package = "github.com/tinkerbell/pbnj/api/v1";

package github.com.tinkerbell.pbnj.api.v1;

import "api/v1/common.proto";

service BMC {
    rpc NetworkSource (NetworkSourceRequest) returns (NetworkSourceResponse);
    rpc Reset(ResetRequest) returns (ResetResponse);
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
}

message NetworkSourceRequest {
    v1.Authn authn = 1;
    v1.Vendor vendor = 2;
    enum NetworkSource {
        DHCP = 0;
        STATIC = 1;
    }
    NetworkSource network_source = 3;
}

message NetworkSourceResponse {
    string task_id = 1;
}

message ResetRequest {
    v1.Authn authn = 1;
    v1.Vendor vendor = 2;
    enum Kind {
        COLD = 0;
        WARM = 1;
    }
    Kind kind = 3;
}

message ResetResponse {
    string task_id = 1;
}

message UserCreds {
    string username = 1;
    string password = 2;
    enum Role {
        admin = 0;
        user = 1;
    };
    Role role = 3;
}

message CreateUserRequest {
    v1.Authn authn = 1;
    v1.Vendor vendor = 2;
    UserCreds user_creds = 3;
}

message CreateUserResponse {
    string task_id = 1;
}

message DeleteUserRequest {
    v1.Authn authn = 1;
    v1.Vendor vendor = 2;
    string username = 3;
}

message DeleteUserResponse {
    string task_id = 1;
}

message UpdateUserRequest {
    v1.Authn authn = 1;
    v1.Vendor vendor = 2;
    UserCreds user_creds = 3;
}

message UpdateUserResponse {
    string task_id = 1;
}
